Minor navbar letter spacing fixes

--- a/kusinanichichi/application/frontend/src/assets/css/Nav.css
+++ b/kusinanichichi/application/frontend/src/assets/css/Nav.css
@@ -7,7 +7,7 @@
 #navigation .nav-link{
     color: black !important;
     font-size: 1.05rem;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
     transition: 0.5s ease-in-out;
     
 }
